--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,20 @@ body {
     font-family: Arial, sans-serif;
     margin: 20px;
     padding: 20px;
-    background-color: #f8f8f8;
+    background: linear-gradient(235deg, 
+    #f8c8dc 0%,  
+    #d8b4f8 25%, 
+    #b3e5fc 50%, 
+    #fff9b1 100% 
+);
+background-attachment: fixed;
+background-size: cover;
 }
 .container {
-    background: #ddd;
+    background: pink;
+    border: black;
+    border: 4px solid black; /* Borde negro */
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8);
     padding: 20px;
     border-radius: 5px;
     width: 400px;
