--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ background-size: cover;
 .container {
     background: pink;
     border: black;
-    border: 4px solid black; /* Borde negro */
+    border: 4px solid black; 
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8);
     padding: 20px;
     border-radius: 5px;
