--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 20px;
     padding: 20px;
     background: linear-gradient(235deg, 
@@ -15,22 +15,28 @@ background-size: cover;
     background: pink;
     border: black;
     border: 4px solid black; 
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8);
+    box-shadow: 6px 6px 1px rgba(0, 0, 0, 0.9);
     padding: 20px;
     border-radius: 5px;
-    width: 400px;
+    width: 600px;
     margin: auto;
+    margin-top: 100px;
 }
 input {
-    width: 70%;
+    width: 60%;
     padding: 5px;
 }
 button {
-    padding: 5px 10px;
+    padding: 6px 15px;
     background-color: green;
+    font-weight: bold;    
     color: white;
-    border: none;
+    border-radius: 2px;
     cursor: pointer;
+}
+button:hover{
+    filter: brightness(130%);
+    transform: scale(98%);
 }
 .task-list {
     margin-top: 20px;
